--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,14 +14,13 @@
 <tr *ngFor="let item of items; let i = index">
 <td>{{ i + 1}}</td>
 <td>{{ item.task }}</td>
+<td><input type="checkbox" [(ngModel)]="item.complete"></td>
 <td [ngSwitch] = "item.complete">
   <span *ngSwitchCase = "true" >Tak</span>
-  <span *ngSwitchDefault= "false"> </span>
+  <span *ngSwitchDefault= "false">Nie </span>
 </td>
 </tr>
 
 </tbody>
-
-
 
 </table>
